--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
+fastapi>=0.103.0
+uvicorn>=0.22.0
+sqlalchemy>=2.0.0
+pydantic>=2.0.0
+python-jose>=3.3.0
+passlib>=1.7.4
+python-multipart>=0.0.6
+pandas>=2.0.0
+openpyxl>=3.1.0
+pyjwt>=2.6.0
+bcrypt>=4.0.0
 annotated-types==0.7.0
 anyio==4.6.2.post1
-bcrypt==4.2.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
@@ -14,17 +24,12 @@ h11==0.14.0
 idna==3.10
 jwt==1.3.1
 motor==3.6.0
-passlib==1.7.4
 pycparser==2.22
-pydantic==2.9.2
 pydantic_core==2.23.4
 PyJWT==2.9.0
 pymongo==4.9.2
-python-multipart==0.0.12
 requests==2.32.3
 sniffio==1.3.1
-SQLAlchemy==2.0.36
 starlette==0.40.0
 typing_extensions==4.12.2
 urllib3==2.2.3
-uvicorn==0.32.0
