--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.16.5
 annotated-types==0.7.0
 anyio==4.6.2.post1
 bcrypt==3.2.0
@@ -14,12 +15,13 @@ fastapi==0.115.2
 greenlet==3.1.1
 h11==0.14.0
 idna==3.10
+Mako==1.3.10
+MarkupSafe==3.0.2
 motor==3.6.0
 numpy==2.2.5
 openpyxl==3.1.5
 pandas==2.2.3
 passlib==1.7.4
-pip==24.2
 psycopg2==2.9.10
 pyasn1==0.4.8
 pycparser==2.22
