--- a/alembic.ini
+++ b/alembic.ini
@@ -86,7 +86,7 @@ path_separator = os
 # file.
 # The URL is now loaded from environment variables (POSTGRES_URL or DATABASE_URL)
 # in env.py, so this is just a fallback for local development
-sqlalchemy.url = postgresql://usp_user:usp_password@localhost:5432/usp_db
+sqlalchemy.url = ${DATABASE_URL}
 
 
 [post_write_hooks]
