--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
     startCommand: "sh start.sh"
     dockerfile: Dockerfile
     envVars:
-      - key: POSTGRES_URL
+      - key: DATABASE_URL
         fromDatabase:
           name: usp-db
           property: connectionString
