--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ numpy==2.2.5
 openpyxl==3.1.5
 pandas==2.2.3
 passlib==1.7.4
-psycopg2==2.9.10
+psycopg2-binary==2.9.11
 pyasn1==0.4.8
 pycparser==2.22
 pydantic==2.9.2
